Encryptor 2 Change To String Instead Of Bytes Based On Encryptor 1